--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
     top: 0;
     position: sticky;
     z-index: 1;
+    display: block;
+
 }
 
 .texto-principal {
@@ -45,6 +47,7 @@
     max-width: 100% !important;
     overflow: hidden !important;
     width: 100%;
+    z-index: 2;
 }
 
 
@@ -74,7 +77,7 @@
 h1 {
     font-family: inherit;
     color: white;
-    font-size: 2rem;
+    font-size: 1.8rem;
     display: block;
     width: 100%;
 
@@ -83,6 +86,7 @@ h1 {
 h2 {
     color: white;
     display: block;
+    font-size: 1rem;
 }
 
 .circle {
