--- a/style.css
+++ b/style.css
@@ -17,26 +17,35 @@
 
 }
 
+.main {
+    display: flexbox;
+}
+
 .home {
     height: calc(100vh - 5rem);
     background-color: #351955;
     margin: 0;
     /* max-width: 100% !important; */
-    overflow: hidden !important;
-    
-    display: flex;
+    /* overflow: hidden !important; */
+
+    display: flexbox;
     flex-wrap: wrap;
 
     /* align-items: center; */
     align-content: center;
+
+    padding-left: 5px;
+    padding-right: 5px;
     
+
 }
 
 .texto-principal {
+    
     top: 40%;
     display: block;
     position: absolute;
-    width: 300px;
+    width: auto;
     /* left: 10%; */
     /* border: 3px solid black; */
     font-family: 'Courier New', Courier, monospace;
@@ -48,13 +57,10 @@
     border-radius: 15px;
     overflow: hidden;
     backdrop-filter: blur(4px);
-    /* padding: 1rem; */
     padding: 1rem;
     padding-top: 3rem;
-    left: 10%;
-
+    margin: 10px;
     z-index: -1;
-
 }
 
 
@@ -62,7 +68,6 @@
     top: 8px;
     left: 8px;
     position: absolute;
-    /* border: 2px solid black; */
     display: flex;
     align-items: center;
 }
@@ -97,8 +102,8 @@ h2 {
 }
 
 .circle {
+    display: flex;
     /* border: 2px solid green; */
-
     position: absolute;
     display: block;
     bottom: 10%;
@@ -110,18 +115,25 @@ h2 {
     z-index: 1;
 }
 
-.cardcodigo {
-    display: block;
-    position: absolute;
-    right: 4%;
-    top: 10%;
 
-    width: 390px;
+.espacoCodio {
+    height: 200px;
+    display: flex;
+    padding: 10px;
+}
+
+.cardcodigo {
+    width: 350px;
     height: 154px;
-    margin: 10;
+    top: 5%;
+    margin: 12px;
+    /* text-align: left; */
     background-color: #011522;
     border-radius: 8px;
-    z-index: 1;
+    position: absolute;
+    right: 0px;
+    
+
 }
 
 .tools {
@@ -158,6 +170,7 @@ h2 {
 .card__content {
     color: white;
     padding: 2%;
+    font-size: 8.6pt;
 }
 
 @keyframes animateCircle {
