--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ h2 {
     transform-style: preserve-3d;
     animation: animateCircle 40s linear infinite;
     z-index: 1;
+    max-width: 100%;
 }
 
 
