modified:   style.css

--- a/style.css
+++ b/style.css
@@ -353,7 +353,7 @@ div.porcen {
 h5.cursos {
     font-size: 15px;
     display: block;
-    b/* order: 2px red solid; */
+    /* order: 2px red solid; */
 }
 
 div.curso {
