--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     transform: translateZ(0);
     padding: 0;
     margin: 0;
-    
+
 }
 
 .cabecalho {
@@ -14,7 +14,8 @@
     top: 0;
     position: sticky;
     z-index: 1;
-    display: block;
+    display: flow-root;
+    width: 100%;
 
 }
 
@@ -32,6 +33,7 @@ body {
 }
 
 .home {
+    top: -5rem;
     height: calc(100vh - 5rem);
     background-color: #351955;
     margin: 0;
@@ -112,7 +114,7 @@ body {
 }
 
 .circle {
-    
+
     display: block;
     /* border: 2px solid green; */
     position: absolute;
@@ -125,7 +127,7 @@ body {
     animation: animateCircle 40s linear infinite;
     /* z-index: 1;
     max-width: 100%; */
-    
+
 
     max-width: 100%;
 }
@@ -334,6 +336,8 @@ pre.PreAcademic {
 
     z-index: 1;
     margin-left: 0px;
+
+
 }
 
 .barraDeProgresso {
@@ -380,7 +384,6 @@ div.curso {
     max-width: 300px;
     align-items: center;
     font-size: 8px;
-
 }
 
 img.curso {
@@ -396,10 +399,108 @@ img.curso {
     transition: transform .5s ease;
 }
 
+li {
+    list-style-position: inside;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+
+h5.cursos2 {
+    text-align: center;
+    position: relative;
+    top: -20p;
+    font-size: 15px;
+    display: block;
+    margin-bottom: 12px;
+}
+
 .repositorios {
     height: calc(100vh - 5rem);
     background-color: #003066;
 }
+
+.apresentacaoGH {
+    width: 100;
+    height: 10rem;
+    /* border: red solid 1px; */
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+}
+
+.repositorios img {
+    position: relative;
+    max-width: 180px;
+    max-height: 180px;
+    width: auto;
+    height: auto;
+}
+
+.cardsGH {
+    /* border: red solid 2px; */
+    display: flex;
+    justify-content: center;
+    height: calc(100% - 12rem);
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 10px;
+    align-content: center;
+}
+
+.cardPort {
+    width: 43%;
+    height: 44%;
+    border: red solid 2px;
+    margin: 9px;
+
+    /*####################################*/
+
+    box-sizing: border-box;
+
+    background: rgba(217, 217, 217, 0.58);
+    border: 1px solid white;
+    box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
+    backdrop-filter: blur(6px);
+    border-radius: 17px;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.5s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    user-select: none;
+    font-weight: bolder;
+    color: black;
+}
+
+/* .cardPort:hover {
+    border: 1px solid black;
+    /* transform: scale(1.05); */
+} */
+
+.cardPort:active {
+    transform: scale(0.95) rotateZ(1.7deg);
+}
+
+.imgPort {
+    position: absolute;
+    display: flex;
+    border-radius: 10px;
+    min-width: 140px;
+    max-width: 400px;
+    -webkit-transition: -webkit-transform .5s ease;
+    transition: transform .5s ease;
+    width: 100%;
+    height: 100%;
+
+}
+
+.imgPort:hover {
+    -webkit-transform: scale(1.3);
+    /* transform: scale(1.1); */
+}
+
 
 .contatos {
     height: calc(100vh - 15rem);
