modified:   style.css

--- a/style.css
+++ b/style.css
@@ -476,7 +476,7 @@ h5.cursos2 {
 
 /* .cardPort:hover {
     border: 1px solid black;
-    /* transform: scale(1.05); */
+    transform: scale(1.05);
 } */
 
 .cardPort:active {
