--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@
     top: 0;
     position: sticky;
     z-index: 1;
-    display: flow-root;
-    width: 100%;
+    width: 100%;    
 
 }
 
@@ -35,7 +34,14 @@ body {
 .home {
     top: -5rem;
     height: calc(100vh - 5rem);
-    background-color: #351955;
+    /* background-color: #351955; */
+
+    background: rgb(0, 142, 255);
+    background: -moz-linear-gradient(190deg, rgba(0, 142, 255, 1) 0%, rgba(0, 35, 138, 1) 50%, rgba(8, 0, 42, 1) 100%);
+    background: -webkit-linear-gradient(190deg, rgba(0, 142, 255, 1) 0%, rgba(0, 35, 138, 1) 50%, rgba(8, 0, 42, 1) 100%);
+    background: linear-gradient(190deg, rgba(0, 142, 255, 1) 0%, rgba(0, 35, 138, 1) 50%, rgba(8, 0, 42, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#008eff", endColorstr="#08002a", GradientType=1);
+
     margin: 0;
     /* max-width: 100% !important; */
     /* overflow: hidden !important; */
@@ -87,7 +93,7 @@ body {
 .developer-intro p {
     padding: 5px 10px;
     margin: 0 20px 0 0;
-    background-color: #64f4ac;
+    background-color: #42aaff;
     color: #2d2e32;
     font-size: 13px;
     font-weight: 600;
@@ -226,7 +232,14 @@ body {
 
 .academic {
     height: calc(100vh - 5rem);
-    background-color: #00665e;
+    /* background-color: #00665e; */
+
+
+    background: rgb(8, 0, 42);
+    background: -moz-linear-gradient(190deg, rgba(8, 0, 42, 1) 0%, rgba(100, 0, 115, 1) 50%, rgba(135, 0, 95, 1) 100%);
+    background: -webkit-linear-gradient(190deg, rgba(8, 0, 42, 1) 0%, rgba(100, 0, 115, 1) 50%, rgba(135, 0, 95, 1) 100%);
+    background: linear-gradient(190deg, rgba(8, 0, 42, 1) 0%, rgba(100, 0, 115, 1) 50%, rgba(135, 0, 95, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#08002a", endColorstr="#87005f", GradientType=1);
 }
 
 .AcademyCentro {
@@ -416,7 +429,13 @@ h5.cursos2 {
 
 .repositorios {
     height: calc(100vh - 5rem);
-    background-color: #003066;
+    /* background-color: #003066; */
+
+    background: rgb(135, 0, 95);
+    background: -moz-linear-gradient(190deg, rgba(135, 0, 95, 1) 0%, rgba(135, 0, 32, 1) 50%, rgba(82, 0, 19, 1) 100%);
+    background: -webkit-linear-gradient(190deg, rgba(135, 0, 95, 1) 0%, rgba(135, 0, 32, 1) 50%, rgba(82, 0, 19, 1) 100%);
+    background: linear-gradient(190deg, rgba(135, 0, 95, 1) 0%, rgba(135, 0, 32, 1) 50%, rgba(82, 0, 19, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#87005f", endColorstr="#520013", GradientType=1);
 }
 
 .apresentacaoGH {
@@ -497,18 +516,33 @@ h5.cursos2 {
 }
 
 .imgPort:hover {
-    -webkit-transform: scale(1.3);
+    /* -webkit-transform: scale(1.3); */
     /* transform: scale(1.1); */
+
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3); 
 }
 
 
 .contatos {
     height: calc(100vh - 15rem);
-    background-color: #0f0046;
+    /* background-color: #0f0046; */
+
+    background: rgb(82, 0, 19);
+    background: -moz-linear-gradient(190deg, rgba(82, 0, 19, 1) 0%, rgba(171, 34, 0, 1) 50%, rgba(171, 77, 0, 1) 100%);
+    background: -webkit-linear-gradient(190deg, rgba(82, 0, 19, 1) 0%, rgba(171, 34, 0, 1) 50%, rgba(171, 77, 0, 1) 100%);
+    background: linear-gradient(190deg, rgba(82, 0, 19, 1) 0%, rgba(171, 34, 0, 1) 50%, rgba(171, 77, 0, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#520013", endColorstr="#ab4d00", GradientType=1);
 }
 
 .footer {
     height: calc(100vh - 5rem);
     height: 10rem;
-    background-color: #460035;
+    /* background-color: #460035; */
+
+    background: rgb(82, 0, 19);
+    background: -moz-linear-gradient(190deg, rgba(82, 0, 19, 1) 0%, rgba(82, 0, 19, 1) 0%, rgba(198, 0, 24, 1) 50%, rgba(85, 0, 0, 1) 100%);
+    background: -webkit-linear-gradient(190deg, rgba(82, 0, 19, 1) 0%, rgba(82, 0, 19, 1) 0%, rgba(198, 0, 24, 1) 50%, rgba(85, 0, 0, 1) 100%);
+    background: linear-gradient(190deg, rgba(82, 0, 19, 1) 0%, rgba(82, 0, 19, 1) 0%, rgba(198, 0, 24, 1) 50%, rgba(85, 0, 0, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#520013", endColorstr="#550000", GradientType=1);
 }
